# Ruoo-Console

./: .cursorrules  Cargo.toml  LICENSE  PLUGIN_DEV_GUIDE.md  README.md  __BLOCKED__  build.rs  quick.bat  run.bat
plugins/: OPEN SOURCE PLUGIN FOR RUOO WRITTEN BY AASCVD.md
plugins/dll_crack/: Cargo.toml
plugins/dll_crack/src/: lib.rs
src/: auth.rs  bootscript.rs  clipboard.rs  config.rs  crypto_channel.rs  host_abi.rs  main.idx  main.rs  memsec.rs  message_broker.idx  message_broker.rs  panic_guard.rs  plugin.idx  plugin.rs  plugin_host.rs  plugin_progress.rs  plugin_registry.rs  plugin_vault.rs  session.rs  shortcuts.rs  stealth.rs  tabs.rs  telemetry.rs  theme.rs  ui.rs  utils.rs  vault.rs  window.rs
src/ai/: cache.rs  deepseek.rs  executor.rs  globals.rs  macros.rs  markdown.rs  misc.rs  mod.rs  permissions.rs  prompt.rs  session.rs  types.rs
src/commands/: help.rs  mod.rs  mod_meta.rs
src/script/: interpreter.rs  mod.rs  permissions.rs  plugin_crash.rs  plugin_mgr.idx  plugin_mgr.rs  plugin_stderr.rs  sysdrv.rs
src/tools/: compiler.rs  crypto.rs  fault_tolerant.rs  files.rs  gen.rs  kernel.rs  mod.rs  net.rs  orchestrator.rs  web.rs
