[package]
name = "ruoo-console"
version = "4.1.3"
edition = "2021"
description = "RUOO-CONSOLE 终端面板 // Zero-Day TUI"
default-run = "ruoo-console"

[features]
aes-tunnel = []

[dependencies]
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = "0.28"
rand = "0.8"
base64 = "0.22"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json", "native-tls"] }
sha2 = "0.10"
crc32fast = "1"
md-5 = "0.10"
sha1 = "0.10"
native-tls = "0.2"
rayon = "1.10"
regex = "1"
arboard = "3"
zip = "2"
aes-gcm = "0.10"
bcrypt = "0.15"
pbkdf2 = "0.12"
hmac = "0.12"
hex = "0.4"
zeroize = { version = "1", features = ["derive"] }
chacha20poly1305 = "0.10"
zstd = "0.13"
rpassword = "7"
nix = { version = "0.29", features = ["ioctl"] }
libloading = "0.8"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
toml = "0.8"
unicode-width = "0.2"
socket2 = { version = "0.5", features = ["all"] }
tokio = { version = "1", features = ["net", "io-util", "rt", "sync", "time"] }
ipnet = "2"
windows-sys = { version = "0.59", features = [
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
] }
x25519-dalek = "2"
filetime = "0.2"
rsa = { version = "0.9", features = ["std"] }
pem = "3"
pkcs8 = { version = "0.10", features = ["pem", "std"] }
der = "0.7"
signature = "2"
flate2 = "1"
lazy_static = "1"

[[bin]]
name = "ruoo-console"
path = "src/main.rs"



[profile.release]
opt-level = "z"
lto = true
strip = "symbols"
codegen-units = 1
panic = "abort"

[build-dependencies]
winres = "0.1"

[profile.dev]
opt-level = 0
strip = "none"
